@@ -1006,6 +1006,7 @@ int CClient::OnSkill_ArmsLore( CUID uid, int iSkillLevel, bool fTest )
 	{
 		case IT_ARMOR:				// some type of armor. (no real action)
 		case IT_SHIELD:
+		case IT_ARMOR_BONE:
 		case IT_ARMOR_CHAIN:
 		case IT_ARMOR_LEATHER:
 		case IT_ARMOR_RING:
